# ocr

./: .gitignore  .prd  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  ocr.bat  setup.bat  start.bat
.github/workflows/: release.yml
.gm/: last-dispatch-ts  mutables.yml  prd.yml  rs-learn.db
.gm/disciplines/codeinsight-manifest/: AGENTS.md.json  README.md.json  src_bootstrap.rs.json  src_llm.rs.json  src_main.rs.json  src_pdf.rs.json  src_pipeline.rs.json  web_index.html.json
.gm/disciplines/codeinsight-vec/: ci-2d60abd-0.json  ci-2d60abd-1.json  ci-2d60abd-10.json  ci-2d60abd-11.json  ci-2d60abd-12.json  ci-2d60abd-13.json  ci-2d60abd-2.json  ci-2d60abd-3.json  ci-2d60abd-4.json  ci-2d60abd-5.json  ci-2d60abd-6.json  ci-2d60abd-7.json  ci-2d60abd-8.json  ci-2d60abd-9.json  ci-59ea9587-0.json  ci-59ea9587-1.json  ci-59ea9587-10.json  ci-59ea9587-11.json  ci-59ea9587-12.json  ci-59ea9587-13.json  ci-59ea9587-14.json  ci-59ea9587-15.json  ci-59ea9587-2.json  ci-59ea9587-3.json  ci-59ea9587-4.json  ci-59ea9587-5.json  ci-59ea9587-6.json  ci-59ea9587-7.json  ci-59ea9587-8.json  ci-59ea9587-9.json  ci-73e3d99c-0.json  ci-73e3d99c-1.json  ci-73e3d99c-2.json  ci-73e3d99c-3.json  ci-73e3d99c-4.json  ci-73e3d99c-5.json  ci-73e3d99c-6.json  ci-744c88a7-0.json  ci-744c88a7-1.json  ci-744c88a7-2.json  (+5 more)
.gm/instructions/: browser.md  emit.md  entry.md  execute.md  plan.md  update_docs.md  verify.md
src/: bootstrap.rs  drive.rs  gemini.rs  infer.py  llm.rs  main.rs  models.rs  ocr.rs  parse.rs  pdf.rs  pipeline.rs  runtime.rs
web/: index.html
(+56 files in other folders)
