[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
pdfium-render = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
once_cell = "1"
