[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
pdfium-render = { version = "0.9", default-features = false, features = ["pdfium_latest", "image_024", "thread_safe"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tar = "0.4"
once_cell = "1"
